Added simulation stuff and cleaned up plots

--- a/cleaning A and E.Rmd
+++ b/cleaning A and E.Rmd
@@ -19,7 +19,8 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE,
                       cache = TRUE,
                       message = FALSE,
-                      warning = FALSE)
+                      warning = FALSE,
+                      fig.align = "center")
 ```
 
 
@@ -126,7 +127,91 @@ However, this intuition is slightly off - each individual with a different covar
 
 The model parameters are well-identified since whilst we're testing $N$ hypotheses, the number of effective parameters we wish to estimate are much lower in fact, only $2K + 1$. The problem can be reconceptualised as constructing prediction intervals for the partial derivates which, whilst heterogeneous, only vary at the subgroup level. This reduction in granularity speaks to the trade-off inherent in heterogeneous causal identification. Whilst we may believe treatment effects vary at the individual level, using conventional methods in the cross-section, we can only identify an average treatment effect for observed subgroups - later in the essay I attempt to use @Wager_and_Athey's causal random forest to address this limitation. 
 
-In conclusion, the first stage interaction test involves estimating the saturated regression and forming multiplicity adjusted one-sided test statistics for the partial derivative $\frac{ \hat{\partial D_i}}{ \hat{\partial Z_i}}$.    
+In conclusion, the first stage interaction test involves estimating the saturated regression and forming multiplicity adjusted one-sided test statistics for the partial derivative $\frac{ \hat{\partial D_i}}{ \hat{\partial Z_i}}$. 
+
+
+```{r first_stage_test_function}
+library(Rfast)
+library(margins)
+library(dplyr)
+library(ggplot2)
+library(ggExtra)
+library(grf)
+library(tibble)
+
+find_SEs <- function(model_data_no_y, model_vcov, instrument){
+  model_data_no_y <- model_data_no_y %>% 
+    rename("instrument" = instrument)
+  model_formula <- as.formula(paste0("~", "instrument", "*."))
+  
+  model_matrix <- model_data_no_y %>% 
+    mutate(instrument = 1) %>% 
+    model.matrix(model_formula, data = .)
+  
+  gradient_matrix_kinda <- model_matrix %>%
+    as_tibble() %>% 
+    mutate_at(vars(-contains(":")), ~(. = 0)) %>% 
+    mutate(instrument = 1) %>% 
+    as.matrix()
+  
+  split_indices <- seq(from = 1, to = nrow(gradient_matrix_kinda), by = 10000) %>% 
+    c(nrow(gradient_matrix_kinda))
+  
+  if (length(split_indices) < 3){
+    vcov_dydx_intermediate <- Rfast::mat.mult(gradient_matrix_kinda, model_vcov)
+    vcov_dydx <- Rfast::mat.mult(vcov_dydx_intermediate,
+                                 Rfast::transpose(gradient_matrix_kinda))
+    SE_dydx <- sqrt(diag(vcov_dydx))
+    
+  } else {
+    baby_SE <- matrix(nrow = nrow(gradient_matrix_kinda), ncol = 1)
+    for (i in 1:(length(split_indices)-1)){
+      baby_matrix <- gradient_matrix_kinda[split_indices[[i]]:split_indices[[i+1]], ]
+      # print(paste0(split_indices[i],"to", split_indices[i+1]))
+      baby_vcov <- Rfast::mat.mult(baby_matrix, model_vcov)
+      baby_vcov <- Rfast::mat.mult(baby_vcov, Rfast::transpose(baby_matrix))
+      baby_SE[split_indices[[i]]:split_indices[[i+1]], ] <- sqrt(diag(baby_vcov))
+      i <- i + 1
+    }
+    SE_dydx <- baby_SE[, 1]
+  }
+  
+  return(SE_dydx)
+  
+} 
+run_first_stage_interactions_fast <- function(dataset, dependent_variable, instrument, weights = NULL){
+  dataset <- dataset %>% 
+    rename("instrument" = instrument)
+  model_formula <- as.formula(paste0(dependent_variable,  "~ ", "instrument", "*."))
+  first_stage_fit <- lm(data = dataset, formula = model_formula, weights = weights)
+  degrees_freedom <- first_stage_fit$df.residual
+  instrument_dummy_val <- dataset$instrument[1]
+  
+  dataset_unique <- dataset %>% 
+    select(-dependent_variable, -instrument) %>% 
+    mutate(instrument = instrument_dummy_val)
+  first_stage_margins <- dydx(model = first_stage_fit, data = dataset_unique, variable = "instrument") 
+  df_margins <- bind_cols(first_stage_margins %>% 
+                            select(contains("dydx")),
+                          dataset_unique) %>% 
+    as_tibble()
+  df_margins$instrument <- dataset$instrument
+  df_margins$SE_dydx_instrument <- find_SEs(dataset_unique, vcov(first_stage_fit), instrument)
+  
+  df_margins <- df_margins %>% 
+    mutate(dydx_lo = dydx_instrument - qt(0.975, degrees_freedom) * SE_dydx_instrument,
+           dydx_hi = dydx_instrument + qt(0.975, degrees_freedom) * SE_dydx_instrument,
+           t_stat = dydx_instrument/SE_dydx_instrument,
+           pval_one_neg = pt(t_stat, degrees_freedom),
+           pval_holm = p.adjust(pval_one_neg, method = "holm"))
+  df_margins$dependent_variable <- dataset %>% 
+    select(dependent_variable) %>% 
+    pull()
+  return(df_margins)
+}
+
+```
+
 
 
 
@@ -134,6 +219,536 @@ In conclusion, the first stage interaction test involves estimating the saturate
 
 
 ## Simulations
+
+
+### Power Simulations
+
+I generate 1000 draws of data using the following data generating process:
+
+$$
+D_i = \pi_0 + \pi_{1i}Z_i + \sum_{k=1}^4 (\gamma_{ki}x_{ki} +  \delta_{ki}(Z_i \times x_{ki})) + \epsilon_i; \ \epsilon_i \sim N(0, 5^2)
+$$
+where the covariates are drawn from a multivariate normal mean 0 and variance $\Sigma = LL'$, the entries of $L$ are drawn from $U(-1, 1)$. The fourth covariate is transformed into a dummy variable depending on its sign and Z is a binary instrument drawn from a Bernoulli distribution with probability a half.
+
+For each draw of the data I run the saturated first stage model and causal random forest and record the number of "true" defiers in the dataset; the number of estimated defiers; and the defier test statistic/$p$-value.
+
+```{r sim_data_generation_and_power_test}
+
+create_fake_data <- function(N, model_betas, force_positive = FALSE){
+  mu <- rep(0, 4)
+  
+  A <- matrix(runif(4^2)*2-1, ncol=4) 
+  Sigma <- t(A) %*% A
+  
+  if (force_positive == TRUE){
+    X_data <- abs(MASS::mvrnorm(n = N, mu = mu, Sigma = Sigma)) %>% 
+      as_tibble() %>% 
+      mutate(Z = rbinom(n = N, 1, 0.5),
+             V4 = ifelse(V4 > 0.5, 1, 0))
+  } else {
+    X_data <- MASS::mvrnorm(n = N, mu = mu, Sigma = Sigma) %>% 
+      as_tibble() %>% 
+      mutate(Z = rbinom(n = N, 1, 0.5),
+             V4 = ifelse(V4 > 0, 1, 0))
+  }
+  
+  X_data_interactions <- model.matrix(~ Z*., data = X_data)
+  D <- X_data_interactions %*% model_betas
+  sim_data <- X_data_interactions %>% 
+    as_tibble() %>% 
+    mutate(D = D[, 1] + rnorm(N)*5)
+  return(sim_data)
+}
+
+power_test <- function(coefs, sim_data){
+  names(coefs) <- names(sim_data)[1:10]
+  
+  
+  first_stage_model <- sim_data %>% 
+    select_at(vars(-contains(":"), -`(Intercept)`)) %>% 
+    run_first_stage_interactions_fast(.,
+                                      "D",
+                                      "Z") %>% 
+    mutate(row_id = row_number(),
+           pval_one_pos = pnorm(-t_stat),
+           model = "saturated first stage")
+  
+  interaction_coefs <- c(coefs[2],
+                         coefs[7:10])
+  interaction_X <- sim_data %>% 
+    select_at(vars(Z, contains("V"), -contains(":"))) %>% 
+    mutate(Z = 1)
+  interaction_X <- model.matrix(~Z*., data = interaction_X) %>% 
+    as_tibble() %>% 
+    select_at(vars(Z, contains(":"))) %>% 
+    as.matrix()
+  
+  true_dydx <- interaction_X %*% interaction_coefs
+  first_stage_model$true_dydx <- true_dydx[,1]
+  forest_model <- sim_first_stage_forest(sim_data)
+  
+  forest_full_wide <- left_join(forest_model,
+                                first_stage_model %>% 
+                                  select_at(vars(row_id,
+                                                 contains("V", ignore.case = FALSE),
+                                                 instrument,
+                                                 true_dydx,
+                                                 dependent_variable)),
+                                by = "row_id") %>% 
+    rename("dydx_instrument" = predictions,
+           "SE_dydx_instrument" = sigma_hat,
+           "dydx_lo" = prediction_lo,
+           "dydx_hi" = prediction_hi) %>% 
+    select(-variance.estimates,
+           -debiased.error) %>% 
+    mutate(model = "forest")
+  
+  models_df_long <- suppressWarnings(bind_rows(first_stage_model %>% 
+                                                 select(-pval_holm),
+                                               forest_full_wide))
+  
+  return(models_df_long)
+}
+
+
+simulation_func <- function(x, force_positive = FALSE){
+  sim_data <- create_fake_data(N = 1000,
+                               model_betas = x,
+                               force_positive = force_positive)
+  
+  pw_test_data <- power_test(x, sim_data)
+  
+  estimated_coef <- lm(dependent_variable ~ instrument + V1 + V2 + V3 + V4, data = pw_test_data) %>% 
+    tidy() %>% 
+    filter(term == "instrument") %>% 
+    select(estimate)
+  
+  pw_test_data$estimate <- estimated_coef[[1]]
+  
+  power_sim_df <- pw_test_data %>%   
+    mutate(defier_true = !(sign(true_dydx) == (sign(estimate))),
+           defier_estimated = !(sign(dydx_instrument) == (sign(estimate)))) %>% 
+    group_by(model) %>% 
+    summarise(min_tstat = min(t_stat),
+              max_tstat = max(t_stat),
+              pval_one_neg = min(pval_one_neg),
+              mean_dydx = mean(dydx_instrument),
+              pval_one_pos = min(pval_one_pos),
+              n_defiers_true = sum(defier_true),
+              pct_defiers_true = n_defiers_true/nrow(pw_test_data),
+              n_defiers_estimated = sum(defier_estimated),
+              pct_defiers_estimated = n_defiers_estimated/nrow(pw_test_data),
+              estimate = first(estimate)) %>% 
+    mutate(pval_defier = ifelse(estimate > 0,
+                                pval_one_neg,
+                                pval_one_pos))
+  return(power_sim_df)
+}
+
+```
+
+
+
+Model parameters are drawn from a uniform distribution with support from -1 to 1. Rather than explicitly generating a positive main effect and defiers at given proportions I let the random draws determine the simulated data properties and discretise the data into 5\% defier bins - this gives good coverage of the defier space up to concentrations of 40\%. However, past 40\% the simulations become particularly uninformative - there's very few simulation draws in this region, typically 1\% of all draws due to the nature of the DGP used. Furthermore, the distinction between defier and complier becomes murky when approaching an even split in the population - if this situation arises in practice it's questionable whether LATE really is the estimator of interest to a researcher.
+
+```{r power_simulation}
+coef_matrix <- matrix(runif(100*10, -1, 1), 100, 10)
+coef_matrix_df <- coef_matrix %>% 
+  as_tibble()
+factor_pos <- ifelse(rowMeans(coef_matrix) < 0, -1, 1) 
+
+coef_list <- lapply(seq_len(nrow(coef_matrix)), function(i) coef_matrix[i,]*factor_pos[i])
+
+
+run_sim <- FALSE
+
+if (run_sim) {
+  library(furrr)
+  plan(multisession)
+  
+  simulations_power <- coef_list %>% 
+    future_map_dfr(simulation_func,
+                   .options = future_options(globals = c("sim_data",
+                                                         "run_first_stage_interactions_fast",
+                                                         "find_SEs",
+                                                         "create_fake_data",
+                                                         "simulation_func",
+                                                         "power_test",
+                                                         "sim_first_stage_forest"),
+                                             packages = c("dplyr",
+                                                          "modelr",
+                                                          "margins",
+                                                          "broom",
+                                                          "grf")),
+                   .progress = TRUE)
+  
+  
+  
+  plan(sequential)
+  # write.csv(simulations_power, file = "power_simulations.csv", row.names = FALSE)
+  # write.csv(simulations_power, file = "power_simulations_both.csv", row.names = FALSE)  
+} else {
+  simulations_power <- readr::read_csv("power_simulations_both.csv")
+}
+
+simulations_power <- simulations_power %>% 
+  mutate(model = tools::toTitleCase(model))
+
+```
+
+
+```{r p_value_normal_scale_plot}
+library(scales)
+negative_log_trans <- function(base = exp(1)) {
+  trans <- function(x) -log(x, base)
+  inv <- function(x) base^(-x)
+  trans_new(paste0("negative_log-", format(base)), trans, inv, 
+            log_breaks(base = base), 
+            domain = c(1e-100, Inf))
+}
+
+simulations_power %>% 
+  filter(pct_defiers_true > 0) %>% 
+  ggplot(aes(x = pct_defiers_true,
+             y = pval_defier,
+             colour = model)) +
+  geom_point(alpha = 0.15) +
+  geom_hline(yintercept = 0.05,
+             linetype = "longdash",
+             alpha = 0.5) +
+  guides(colour = "none") +
+  scale_y_reverse() +
+  scale_x_continuous(labels = scales::percent_format(accuracy = 1)) +
+  facet_wrap(~model) +
+  labs(x = "Defier Percentage",
+       y = "P-Value",
+       caption = "Note: Y-axis scale inverted. \n Dashed line indicates a p-value of 0.05.",
+       title = "P-Values from Power Simulations") +
+  theme_minimal()
+```
+
+
+```{r p_val_power_neg_log_10}
+
+simulations_power %>% 
+  filter(pct_defiers_true > 0) %>% 
+  ggplot(aes(x = pct_defiers_true,
+             y = pval_defier,
+             colour = model)) +
+  geom_point(alpha = 0.15) +
+  geom_hline(yintercept = 0.05,
+             linetype = "longdash",
+             alpha = 0.5) +
+  scale_y_continuous(trans = negative_log_trans(10)) +
+  scale_x_continuous(labels = scales::percent_format(accuracy = 1)) +
+  guides(colour = "none") +
+  theme_minimal() +
+  facet_wrap(~model) +
+  labs(x = "Defier Percentage",
+       y = "P-Value",
+       caption = "Note: Y-Axis on negative log(10) scale. \n Dashed line indicates a p-value of 0.05",
+       title = "P-Values from Power Simulations")
+
+```
+
+```{r p_val_low_defier_plot}
+simulations_power %>% 
+  filter(pct_defiers_true > 0) %>% 
+  ggplot(aes(x = pct_defiers_true,
+             y = pval_defier,
+             colour = model)) +
+  geom_point(alpha = 0.15,
+             aes(colour = model)) +
+  geom_hline(yintercept = 0.05, linetype = "longdash") +
+  scale_y_reverse() +
+  geom_smooth(se = TRUE,
+              colour = "violetred",
+              alpha = 0.5) +
+  scale_x_continuous(limits = c(0, 0.2), labels = scales::percent_format(accuracy = 1)) +
+  theme_minimal() +
+  facet_wrap(~model) +
+  guides(colour = "none") +
+  labs(x = "Defier Percentage",
+       y = "P-Value",
+       title = "Power Simulation Results at Low Defier Proportion",
+       caption = "Note: Y-axis scale inverted. \n Dashed line indicates a p-value of 0.05.")
+
+simulations_power %>% 
+  filter(pct_defiers_true > 0) %>% 
+  ggplot(aes(x = pct_defiers_true,
+             y = pval_defier,
+             colour = model)) +
+  geom_point(alpha = 0.15,
+             aes(colour = model)) +
+  geom_hline(yintercept = 0.05, linetype = "longdash") +
+  geom_smooth(se = TRUE,
+              colour = "violetred",
+              alpha = 0.5) +
+  scale_y_continuous(trans = negative_log_trans(10)) +
+  scale_x_continuous(limits = c(0, 0.2), labels = scales::percent_format(accuracy = 1)) +
+  theme_minimal() +
+  facet_wrap(~model) +
+  guides(colour = "none") +
+  labs(x = "Defier Percentage",
+       y = "P-Value",
+       title = "Power Simulation Results at Low Defier Proportion",
+       caption = "Note: Y-Axis on negative log(10) scale. \n Dashed line indicates a p-value of 0.05")
+
+```
+
+
+```{r demonstration_plot}
+p <- simulations_power %>% 
+  filter(pct_defiers_true > 0) %>% 
+  ggplot(aes(x = mean_dydx,
+             y = pval_defier)) +
+  geom_point(alpha = 0.05) +
+  geom_smooth(method = lm, se = FALSE) +
+  scale_y_continuous(trans = negative_log_trans(10)) +
+  theme_minimal() +
+  guides(colour = "none") +
+  labs(x = "Mean Instrument Partial Effect",
+       y = "P-Value",
+       title = "Defier P-Value against Mean Instrument Partial Effect",
+       caption = "Note: Y-Axis on negative log(10) scale.")
+ggMarginal(p,  type = "histogram")
+```
+
+
+```{r mean_dydx_plot}
+
+
+p <- simulations_power %>% 
+  filter(pct_defiers_true > 0) %>% 
+  ggplot(aes(x = mean_dydx,
+             y = pval_defier,
+             colour = factor(sign(estimate)),
+             group = sign(estimate))) +
+  geom_point(alpha = 0.05) +
+  geom_smooth(method = lm, se = FALSE) +
+  scale_y_continuous(trans = negative_log_trans(10)) +
+  theme_minimal() +
+  guides(colour = "none") +
+  labs(x = "Mean Instrument Partial Effect",
+       y = "P-Value",
+       title = "Defier P-Value against Mean Instrument Partial Effect",
+       caption = "Note: Y-Axis on negative log(10) scale.")
+ggMarginal(p,
+           type = "histogram",
+           groupColour = TRUE,
+           groupFill = TRUE)
+
+
+```
+
+
+```{r binned_power}
+sim_bin <- simulations_power %>% 
+  group_by(model,
+           gr=cut(pct_defiers_true, breaks= seq(0, 1, by = 0.05))) %>% 
+  mutate(n= n()) %>%
+  arrange(as.numeric(gr)) %>% 
+  mutate(n_rejected = ifelse(pval_defier < 0.05, 1, 0)) %>% 
+  mutate(pct_rejected = sum(n_rejected)/n) 
+
+sim_bin_summ <- simulations_power %>% 
+  group_by(model,
+           gr=cut(pct_defiers_true, breaks= seq(0, 1, by = 0.05))) %>% 
+  mutate(n= n()) %>%
+  arrange(as.numeric(gr)) %>% 
+  mutate(n_rejected = ifelse(pval_defier < 0.05, 1, 0)) %>% 
+  summarise(pct_rejected = mean(n_rejected),
+            sd_rejected = sd(n_rejected),
+            n = unique(n),
+            mean_true_defier = mean(pct_defiers_true))
+
+
+sim_bin_summ %>% 
+  na.omit() %>% 
+  ggplot(aes(x = gr, y = pct_rejected, colour = model, group = model)) +
+  geom_point(aes(size = n)) + 
+  geom_line() +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  scale_y_continuous(labels = scales::percent_format(accuracy = 1)) +
+  guides(size = "none")  +
+  theme(legend.position = c(0.5, 0.2),
+        legend.background = element_rect(fill="lightgrey", 
+                                  size=0.5,  linetype = 0)) +
+  labs(y = "Proportion Null Rejected",
+       x = "Defier Proportion",
+       caption = "Note: Point size indicates number of draws in bin.",
+       title = "Power As a Function of Defier Proportion")
+
+sim_bin_summ %>% 
+  na.omit() %>% 
+  filter(mean_true_defier < 0.3) %>% 
+  ggplot(aes(x = gr, y = pct_rejected, colour = model, group = model)) +
+  geom_point(aes(size = n)) + 
+  geom_line() +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  scale_y_continuous(labels = scales::percent_format(accuracy = 1)) +
+  guides(size = "none") +
+    theme(legend.position = c(0.5, 0.2),
+        legend.background = element_rect(fill="lightgrey", 
+                                  size=0.5,  linetype = 0)) +
+    labs(y = "Proportion Null Rejected",
+       x = "Defier Proportion",
+       caption = "Note: Point size indicates number of draws in bin.",
+       title = "Power As a Function of Defier Proportion")
+
+
+
+
+sim_bin %>% 
+  na.omit() %>% 
+  summarise(m_pval = mean(pval_defier),
+         sd_pval = sd(pval_defier)) %>% 
+  ggplot(aes(x = gr, y = m_pval, colour = model, group = model)) +
+  geom_point() + 
+  geom_line() + 
+  geom_linerange(aes(x = gr,
+                     ymin = m_pval - 1.96*sd_pval,
+                     ymax = m_pval + 1.96*sd_pval)) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  guides(size = "none",
+         colour = "none") +
+  facet_wrap(~model) +
+    labs(y = "Mean P-Value",
+       x = "Defier Proportion",
+       caption = "Note: Dashed line indicates p-value of 0.05. \n 95% Confidence Intervals Displayed.",
+       title = "Mean P-Value as a Function of Defier Proportion") +
+  geom_hline(yintercept = 0.05,
+             linetype = "longdash",
+             alpha = 0.5)
+
+sim_bin_summ %>% 
+  na.omit() %>% 
+  ggplot(aes(x = gr, y = pct_rejected, colour = model, group = model)) +
+  geom_point() + 
+  geom_line() + 
+  geom_linerange(aes(x = gr,
+                     ymin = pct_rejected - 1.96*sd_rejected,
+                     ymax = pct_rejected + 1.96*sd_rejected)) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  scale_y_continuous(labels = scales::percent_format(accuracy = 1)) +
+  guides(size = "none",
+         colour = "none") +
+  facet_wrap(~model) +
+    labs(y = "Proportion Null Rejected",
+       x = "Defier Proportion",
+       caption = "Note: Point size indicates number of draws in bin. \n 95% Confidence Intervals Displayed.",
+       title = "Power As a Function of Defier Proportion")
+
+```
+
+
+
+```{r}
+
+library(ggridges)
+
+
+sim_bin %>% 
+  na.omit() %>% 
+  ggplot(aes(x = pval_defier, y = gr, fill = gr)) +
+  geom_density_ridges() +
+  theme_ridges() +
+  guides(fill = "none") +
+  scale_x_continuous(trans = negative_log_trans(10)) +
+  labs(y = "Defier Proportion",
+       x = "P-Value",
+       title = "P-Value distribution as Defier Proportion Changes",
+       caption = "Note: X-Axis on negative log(10) scale.")
+
+
+
+
+```
+
+
+### Size Simulations
+
+
+```{r size_sims}
+
+run_sim <- FALSE
+if (run_sim) {
+  library(furrr)
+  plan(multisession)
+  
+  simulations_size <- coef_list %>% 
+    map(abs) %>% 
+    future_map_dfr(simulation_func,
+                   force_positive = TRUE,
+                   .options = future_options(globals = c("sim_data",
+                                                         "run_first_stage_interactions_fast",
+                                                         "find_SEs",
+                                                         "create_fake_data",
+                                                         "simulation_func",
+                                                         "power_test",
+                                                         "sim_first_stage_forest"),
+                                             packages = c("dplyr",
+                                                          "modelr",
+                                                          "margins",
+                                                          "broom",
+                                                          "grf")),
+                   .progress = TRUE)
+  
+  
+  
+  plan(sequential)
+  write.csv(simulations_size, file = "size_simulations_both.csv", row.names = FALSE)
+  # write.csv(simulations_size, file = "size_simulations_both.csv", row.names = FALSE)  
+} else {
+  simulations_size <- readr::read_csv("size_simulations_both.csv")
+}
+simulations_size <- simulations_size %>% 
+  mutate(model = tools::toTitleCase(model))
+```
+
+
+
+```{r}
+
+simulations_size %>% 
+  ggplot(aes(x = pval_defier,
+             fill = model)) +
+  geom_histogram(colour = "black") +
+  facet_wrap(~model) +
+  theme_minimal() +
+  guides(fill = "none") +
+  labs(x = "P-Value",
+       title = "P-Value Distribution Under One-Sided Null")
+
+
+simulations_size %>% 
+  filter(pct_defiers_true == 0) %>% 
+  ggplot(aes(sample = pval_defier,
+             colour = model)) +
+  stat_qq(distribution = qunif) +
+  geom_abline(intercept = 0, slope = 1) +
+  scale_y_continuous(trans = negative_log_trans(10)) +
+  scale_x_continuous(trans = negative_log_trans(10)) +
+  facet_wrap(~model) +
+  theme_minimal() +
+  guides(colour = "none") +
+  labs(title = "QQ plot of Simulated P-values",
+       subtitle = "Negative Log(10) Scale")
+
+
+simulations_size %>% 
+  filter(pval_defier < 0.05) %>% 
+  summarise(n = nrow(.),
+            proportion = n / nrow(simulations_size))
+
+simulations_size %>% 
+  filter(pct_defiers_true > 0) %>% 
+  nrow()
+```
 
 
 # Data and Replication
@@ -728,122 +1343,6 @@ rm(SEs_IV_4,
 
 # Checking First Stage
 
-
-
-## Simulations
-
-```{r first_stage_sims}
-library(margins)
-x <- rnorm(100) + 3
-D <- rbinom(100, size = 1, 0.5)
-y <- D*5*x + (1-D)*-5*x + 10 + rnorm(100)
-df_sim <- tibble(y, x, D)
-lm(y ~ x, data = df_sim) %>% summary()
-D_yes <- lm(y ~ x, data = df_sim %>% filter(D == 1)) 
-D_no <- lm(y ~ x, data = df_sim %>% filter(D ==0)) 
-D_int <- lm(y ~ x  +D+ x*D, data = df_sim) 
-
-head(dydx(data = df_sim, D_int, "x"))
-
-
-df_sim_margins <- margins(data = df_sim, D_int, "x", unit_ses = TRUE) %>% 
-  as_tibble() %>% 
-  mutate(dydx_x_low = dydx_x  - 1.96*SE_dydx_x,
-         dydx_high = dydx_x + 1.96*SE_dydx_x)
-  
-df_sim_margins %>% head()
-rm(x,
-   D,
-   y,
-   df_sim,
-   D_yes,
-   D_no,
-   D_int,
-   df_sim_margins)
-
-```
-
-
-
-
-```{r first_stage_functions}
-
-##TODO: Propagate dydx to entire dataset?
-library(Rfast)
-
-find_SEs <- function(model_data_no_y, model_vcov, instrument){
-  model_data_no_y <- model_data_no_y %>% 
-    rename("instrument" = instrument)
-  model_formula <- as.formula(paste0("~", "instrument", "*."))
-  
-  model_matrix <- model_data_no_y %>% 
-    mutate(instrument = 1) %>% 
-    model.matrix(model_formula, data = .)
-  
-  gradient_matrix_kinda <- model_matrix %>%
-    as_tibble() %>% 
-  mutate_at(vars(-contains(":")), ~(. = 0)) %>% 
-    mutate(instrument = 1) %>% 
-  as.matrix()
-  
-  split_indices <- seq(from = 1, to = nrow(gradient_matrix_kinda), by = 10000) %>% 
-    c(nrow(gradient_matrix_kinda))
-  
-  if (length(split_indices) < 3){
-    vcov_dydx_intermediate <- Rfast::mat.mult(gradient_matrix_kinda, model_vcov)
-    vcov_dydx <- Rfast::mat.mult(vcov_dydx_intermediate,
-                                 Rfast::transpose(gradient_matrix_kinda))
-    SE_dydx <- sqrt(diag(vcov_dydx))
-    
-  } else {
-    baby_SE <- matrix(nrow = nrow(gradient_matrix_kinda), ncol = 1)
-    for (i in 1:(length(split_indices)-1)){
-      baby_matrix <- gradient_matrix_kinda[split_indices[[i]]:split_indices[[i+1]], ]
-      print(paste0(split_indices[i],"to", split_indices[i+1]))
-      
-      baby_vcov <- Rfast::mat.mult(baby_matrix, model_vcov)
-      baby_vcov <- Rfast::mat.mult(baby_vcov, Rfast::transpose(baby_matrix))
-      baby_SE[split_indices[[i]]:split_indices[[i+1]], ] <- sqrt(diag(baby_vcov))
-      i <- i + 1
-    }
-    SE_dydx <- baby_SE[, 1]
-  }
-
-  return(SE_dydx)
-    
-} 
-run_first_stage_interactions_fast <- function(dataset, dependent_variable, instrument, weights = NULL){
-  dataset <- dataset %>% 
-    rename("instrument" = instrument)
-  model_formula <- as.formula(paste0(dependent_variable,  "~ ", "instrument", "*."))
-  first_stage_fit <- lm(data = dataset, formula = model_formula, weights = weights)
-  degrees_freedom <- first_stage_fit$df.residual
-  instrument_dummy_val <- dataset$instrument[1]
-  
-  dataset_unique <- dataset %>% 
-    select(-dependent_variable, -instrument) %>% 
-    distinct() %>% 
-    mutate(instrument = instrument_dummy_val)
-  first_stage_margins <- dydx(model = first_stage_fit, data = dataset_unique, variable = "instrument") 
-  df_margins <- bind_cols(first_stage_margins %>% 
-                            select(contains("dydx")),
-                          dataset_unique) %>% 
-    as_tibble()
-  df_margins$SE_dydx_instrument <- find_SEs(dataset_unique, vcov(first_stage_fit), instrument)
-  
-  df_margins <- df_margins %>% 
-    mutate(dydx_lo = dydx_instrument - qt(0.975, degrees_freedom) * SE_dydx_instrument,
-           dydx_hi = dydx_instrument + qt(0.975, degrees_freedom) * SE_dydx_instrument,
-           t_stat = dydx_instrument/SE_dydx_instrument,
-           pval_one_neg = pt(t_stat, degrees_freedom),
-           pval_holm = p.adjust(pval_one_neg, method = "holm"))
-  return(df_margins)
-}
-
-
-```
-
-
 ## Angrist and Evans
 ```{r run_first_stage_AE}
 
@@ -999,20 +1498,24 @@ all_equal(first_stage_interactions, test)
 
 
 ```{r plotting_first_stage_interactions}
-library(ggplot2)
-library(scales)
+
 first_stage_interactions_AE %>% 
   filter(pval_one_neg < 0.1 | pval_holm < 0.1)
 
-first_stage_interactions_AE %>% 
-  ggplot(aes(x = dydx_instrument, fill = dataset)) +
-  geom_histogram() +
-  facet_wrap(~dataset, scales = "free")
+colour_pair <- c("hotpink", "darkorange")
 
 first_stage_interactions_AE %>% 
-  ggplot(aes(x = pval_one_neg, fill = dataset)) +
-  geom_histogram() +
-  facet_wrap(~dataset, scales = "free")
+  ggplot(aes(x = dydx_instrument, fill = dataset)) +
+  geom_histogram(colour = "black") +
+  facet_wrap(~dataset, scales = "free") +
+  theme_minimal() +
+  guides(fill = "none") +
+  scale_fill_manual(values = colour_pair) +
+  labs(x = "Instrument Partial Effect",
+       title = "Partial Effects - Same-Sex Instrument")
+
+
+
 
 first_stage_interactions_AE %>% 
   group_by(dataset) %>% 
@@ -1024,7 +1527,11 @@ first_stage_interactions_AE %>%
   geom_ribbon(alpha = 0.2) +
   theme_minimal() +
   facet_wrap(~dataset, scales = "free_x") +
-  geom_hline(yintercept = 0, linetype = "longdash")
+  geom_hline(yintercept = 0, linetype = "longdash") +
+  guides(colour = "none") +
+  scale_colour_manual(values = colour_pair) +
+  labs(y = "Instrument Partial Effect",
+       title = "Partial Effects Ranked - Same-Sex Instrument")
 
 
 ```
@@ -1032,14 +1539,16 @@ first_stage_interactions_AE %>%
 
 
 ```{r plotting_interactions_two}
-negative_log_trans <- function(base = exp(1)) {
-    trans <- function(x) -log(x, base)
-    inv <- function(x) base^(-x)
-    trans_new(paste0("negative_log-", format(base)), trans, inv, 
-              log_breaks(base = base), 
-              domain = c(1e-100, Inf))
-}
 
+first_stage_interactions_AE %>% 
+  ggplot(aes(x = pval_one_neg, fill = dataset)) +
+  geom_histogram(colour = "black") +
+  facet_wrap(~dataset, scales = "free") +
+  theme_minimal() +
+  scale_fill_manual(values = colour_pair) +
+  guides(fill = "none") +
+  labs(x = "P-Value Defier",
+       title = "Histogram of One-Sided P-Values - Same-Sex Instrument")
 
 first_stage_interactions_AE %>% 
   group_by(dataset) %>% 
@@ -1051,10 +1560,10 @@ first_stage_interactions_AE %>%
   scale_x_continuous(trans=negative_log_trans(10)) +
   scale_y_continuous(trans=negative_log_trans(10)) +
   labs(title = "QQ plot of P-values First Stage Interactions",
-       subtitle = "Negative Log(10) Scale") +
+       caption = "Note: Both axes use negative log(10) scale.") +
   facet_wrap(~dataset) +
-  geom_hline(yintercept = 0.05, linetype = "longdash", alpha = 0.2)
-
+  guides(colour = "none") +
+  scale_colour_manual(values = colour_pair)
 
 
 
@@ -1101,13 +1610,23 @@ first_stage_interactions_maimonides %>%
 
 first_stage_interactions_maimonides %>% 
   ggplot(aes(x = dydx_instrument, fill = dataset)) +
-  geom_histogram() +
-  facet_wrap(~dataset, scales = "free")
+  geom_histogram(colour = "black") +
+  facet_wrap(~dataset, scales = "free") +
+  theme_minimal() +
+  guides(fill = "none") +
+  scale_fill_manual(values = colour_pair) +
+  labs(x = "Instrument Partial Effects",
+       title = "Partial Effects - Maimonides' Instrument")
 
 first_stage_interactions_maimonides %>% 
   ggplot(aes(x = pval_one_neg, fill = dataset)) +
-  geom_histogram() +
-  facet_wrap(~dataset, scales = "free")
+  geom_histogram(colour="black") +
+  facet_wrap(~dataset, scales = "free") +
+  guides(fill = "none") +
+  theme_minimal() +
+  labs(title = "P-Values - Maimonides' Instrument",
+       x = "P-Value") +
+  scale_fill_manual(values = colour_pair)
 
 first_stage_interactions_maimonides %>% 
   group_by(dataset) %>% 
@@ -1118,7 +1637,11 @@ first_stage_interactions_maimonides %>%
   geom_ribbon(alpha = 0.2) +
   theme_minimal() +
   facet_wrap(~dataset, scales = "free_x") +
-  geom_hline(yintercept = 0, linetype = "longdash")
+  geom_hline(yintercept = 0, linetype = "longdash") +
+  labs(y = "Partial Effect",
+       title = "Partial Effect Ranked - Maimonides' Instrument") +
+  scale_colour_manual(values = colour_pair) +
+  guides(colour = "none")
 
 first_stage_interactions_maimonides %>% 
   group_by(dataset) %>% 
@@ -1128,11 +1651,11 @@ first_stage_interactions_maimonides %>%
   theme_minimal() +
   scale_x_continuous(trans=negative_log_trans(10)) +
   scale_y_continuous(trans=negative_log_trans(10)) +
-  labs(title = "QQ plot of P-values First Stage Interactions",
-       subtitle = "Negative Log(10) Scale") +
+  labs(title = "QQ plot of P-values First Stage Interactions - Maimonides' Instrument",
+       caption = "Note: Both axes negative log(10) scale.") +
   facet_wrap(~dataset) +
-  geom_hline(yintercept = 0.05, linetype = "longdash", alpha = 0.2)
-
+  scale_colour_manual(values = colour_pair) +
+  guides(colour = "none")
 
 ```
 
@@ -1169,9 +1692,13 @@ first_stage_interactions_ADH_manu %>% nrow()
 first_stage_interactions_ADH_manu %>% 
   filter(pval_holm < 0.05)
 
+
 first_stage_interactions_ADH_manu %>% 
   ggplot(aes(x = dydx_instrument, fill = dataset)) +
-  geom_histogram() 
+  geom_histogram(colour = "black") +
+  guides(fill = "none") +
+  scale_fill_manual(values = colour_pair) +
+  theme_minimal() 
 
 first_stage_interactions_ADH_manu %>% 
   ggplot(aes(x = pval_one_neg, fill = dataset)) +
@@ -1184,7 +1711,7 @@ first_stage_interactions_ADH_manu %>%
   geom_point(aes(colour = dataset)) +
   geom_ribbon(alpha = 0.2) +
   theme_minimal() +
-  geom_hline(yintercept = 0, linetype = "longdash")
+  geom_hline(yintercept = 0, linetype = "longdash") 
 
 first_stage_interactions_ADH_manu %>% 
   ggplot(aes(sample = pval_one_neg, colour = dataset)) +
@@ -1465,7 +1992,6 @@ tau_hat_results_ADH %>%
 # Bayesian Test
 write up on bayesian test
 
-## Simulations
 ## Angrist and Evans
 ## Maimonides Rule
 ## Autor Dorn Hanson
